# AIstudioProxyAPI

./: DOCKER_REMOVAL_SUMMARY.md  QUICK_START.md  README.md  RESTRUCTURE_SUMMARY.md  STARTUP_GUIDE.md  api_utils.py  browser_utils.py  cleanup_backup_list.txt  cleanup_project.sh  config.py  gui_launcher.py  launch_camoufox.py  logging_utils.py  models.py  pyproject.toml  requirements.txt  server.py  start.py  start.sh  stream.py  test_api.sh  verify_cleanup.sh  webui.js
aistudio_proxy/: __init__.py  main.py  server.py
aistudio_proxy/api/: __init__.py  app.py  queue_worker.py  request_processor.py  routes.py  utils.py
aistudio_proxy/browser/: __init__.py  initialization.py  model_management.py  operations.py
aistudio_proxy/config/: __init__.py  constants.py  selectors.py  settings.py  timeouts.py
aistudio_proxy/core/: __init__.py  chat.py  exceptions.py  logging.py
aistudio_proxy/stream/: __init__.py
aistudio_proxy/utils/: __init__.py  setup.py
api_utils/: utils.py
browser_utils/: __init__.py  operations.py
config/: __init__.py  selectors.py
data/auth_profiles/active/: auth_state_1749157382.json
static/certs/: accounts.google.com.crt  accounts.google.com.key  aistudio.google.com.crt  aistudio.google.com.key  alkalimakersuite-pa.clients6.google.com.crt  alkalimakersuite-pa.clients6.google.com.key  apis.google.com.crt  apis.google.com.key  feedback-pa.clients6.google.com.crt  feedback-pa.clients6.google.com.key  people-pa.clients6.google.com.crt  people-pa.clients6.google.com.key  play.google.com.crt  play.google.com.key  waa-pa.clients6.google.com.crt  waa-pa.clients6.google.com.key  www.google.com.crt  www.google.com.key
